docs(develop): rewrite the four contributor pages with verified outputs (#863)
* docs(develop): rewrite the four contributor pages with verified outputs

Environment and run-and-debug become how-to pages with prerequisites,
numbered steps and the output of each command; testing and
pull-requests become reference pages with tables for the tiers, the
integration test classes, the checks a pull request must pass and what
`make` enforces.

Facts corrected on the way: the nl6 and ClickHouse images are pinned in
.github/e2e-images and bumped by Dependabot, not pinned in
Nl6Container.java; the Nix shell carries no pcap tooling; `make
coverage` still runs Checkstyle and Error Prone; the sFlow fuzz harness
has no committed seeds; a stale mvnHash is pushed back by the nix
workflow on same-repo branches; the receiver example is IPFIX on the
replay script's default port.

Assisted-by: ClaudeCode:claude-fable-5-1
Signed-off-by: Ronny Trommer <ronny@no42.org>

* docs(develop): correct three testing-page details from the verifier

The Vault IT pins its own image, SpotBugs and the coverage floor run
after Failsafe at verify, and a crash input replays from the method's
own Inputs directory.

Assisted-by: ClaudeCode:claude-fable-5-1
Signed-off-by: Ronny Trommer <ronny@no42.org>

---------

Signed-off-by: Ronny Trommer <ronny@no42.org>